src/objects/EDIIntegrationConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Default_Meter_Number__c</fullName>
        <label>Default Meter Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDI_Outbound_End_Point__c</fullName>
        <label>EDI Outbound End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Interval_Request_Code__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Interval Request Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Email__c</fullName>
        <label>Notify Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipient_DUNS__c</fullName>
        <label>Receipient DUNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EDI Integration Configuration</label>
</CustomObject>